# vibe-lox

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Grammar.md  LLVM_CODEGEN_PLAN.md  README.md  SESSION.md  UPVALUE_IMPL.md  build.rs  run-llvm.sh
.cargo/: config.toml
.github/workflows/: rust.yml
docs/: ARCHITECTURE.md  STDIN_EXTENSION.md  ariadne-migration-analysis.md  repl-tab-completion-research.md  stack-frames-design.md
examples/: classes.lox
fixtures/: arithmetic.expected  arithmetic.lox  backtrace_nested.lox  classes.expected  classes.lox  control_flow.expected  control_flow.lox  counter.lox  error_add_types.expected_error  error_add_types.lox  error_class_method.lox  error_missing_semicolon.lox  error_not_callable.expected_error  error_not_callable.lox  error_property_non_instance.expected_error  error_property_non_instance.lox  error_type.expected_error  error_type.lox  error_wrong_arity.expected_error  error_wrong_arity.lox  fib.lox  read_line_echo.lox  read_line_eof.lox  read_line_to_number.lox  shebang.expected  shebang.lox  strings.expected  strings.lox  to_number.expected  to_number.lox
runtime/: Makefile  lox_runtime.c  lox_runtime.h
src/: error.rs  lib.rs  main.rs  repl.rs  stdlib.rs
src/ast/: mod.rs  printer.rs
src/codegen/: capture.rs  compiler.rs  mod.rs  native.rs  runtime.rs  types.rs
src/interpreter/: callable.rs  environment.rs  mod.rs  resolver.rs  value.rs
src/parser/: mod.rs
src/vm/: mod.rs  (+3 more)
tests/: cross_backend_tests.rs  interpreter_tests.rs  llvm_tests.rs  native_compile_tests.rs  parser_error_tests.rs  vm_tests.rs
(+3 files in other folders)
